--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ main img{
     margin-top: 40px;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(6, 5vw);
+    grid-template-rows: repeat(6, 100px);
     grid-gap: 15px;
 }
 
@@ -627,7 +627,7 @@ footer h2{
       margin-top: 40px;
       display: grid;
       grid-template-columns: repeat(8, 1fr);
-      grid-template-rows: repeat(8, 5vw);
+      grid-template-rows: repeat(8, 100px);
       grid-gap: 15px;
       margin-bottom: 30px;
   }
