--- a/magnific-popup.css
+++ b/magnific-popup.css
@@ -23,9 +23,9 @@
 .mfp-container {
   text-align: center;
   position: absolute;
-  width: 100%;
+  width: 80%;
   height: 100%;
-  left: 0;
+  left: 10%;
   top: 0;
   padding: 0 8px;
   box-sizing: border-box; }
