--- a/css/styles_compiled.css
+++ b/css/styles_compiled.css
@@ -456,6 +456,10 @@ align-items: center;
 
 @media (max-width: 1779px) {
 
+.btn-menu {
+  display: none;
+}
+
 .section-container {
   display: flex;
   flex-direction: column;
